kubernetes/istio/front-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: example-front-ingress
spec:
  hosts:
  - "example-ingress.com"
  gateways:
  - example-gateway
  http:
    - route:
      - destination:
          host: istio-front-example
