kubernetes/istio/single-file-front-back.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: example-front-ingress
spec:
  hosts:
  - "example-ingress.com"
  gateways:
  - example-gateway
  http:
    - match:
      - uri:
          prefix: /server
      rewrite:
        uri: "/"  
      route:
      - destination:
          host: istio-server-example
    - route:
      - destination:
          host: istio-front-example
